# kiwoom-rest-trade

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
data/: kiwoom_api_index.csv  kiwoom_error_codes.json
docs/: 03_DEVELOPMENT_ENV.md  05_API_LIST.md  API_LIST.md  ARCHITECTURE.md  CODEGEN_GUIDE.md  DEVELOPMENT_ENV.md  PRD.md  README.md  kiwoom_api_spec.json  키움 REST API 문서.xlsx
docs/plan/: 실서버 종합 조회(E2E) 6대 매트릭스 테스트 계획서.md  인증 매니저(auth.py) 및 유량 제어기(limiter.py) 구현 계획서.md  코드 생성기(Codegen) 및 라이브러리 베이스 구현 계획서.md  통합 클라이언트(client.py) 조립 및 유닛 테스트 구현 계획서.md
kiwoom/: __init__.py  auth.py  client.py  exceptions.py  limiter.py
kiwoom/api/: auth.py  base.py  domestic.py  overseas.py
kiwoom/models/: auth.py  base.py  domestic.py  overseas.py
tests/: test_auth.py  test_client.py  test_limiter.py
tools/: codegen.py  generate_api_list.py  run_live_test.py  run_read_only_tests.py
