[project]
name = "kiwoom-rest-trade"
version = "0.1.0"
description = "키움증권 신형 REST/WebSocket API 비동기 파이썬 SDK"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "httpx[http2]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

# Ruff 설정 (린터 & 포맷터)
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (임포트 정렬)
    "B",   # flake8-bugbear (잠재적 버그)
    "RUF", # Ruff 고유 규칙
]
ignore = ["E501"]  # 자동 생성된 모델 내 긴 한국어 설명글(Line too long) 검사 제외

# Mypy 설정 (타입 체크)
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true  # 엄격한 타입 정의 강제
disallow_incomplete_defs = true
ignore_missing_imports = true

# Pytest 설정
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# Hatch 빌드 대상 패키지 경로 명시
[tool.hatch.build.targets.wheel]
packages = ["kiwoom"]

